# gitthub

./: .env  .env.example  .env.superset  .gitignore  AWS_SETUP_GUIDE.md  CLAUDE.md  DATABANK_README.md  README.md  SUPERSET_SETUP_GUIDE.md  app.py  docker-compose.superset.yml  docker-compose.yml  gitthub.py  main.py  pyproject.toml  render.yaml  requirements.txt  style.css  test_render_deployment.html
.streamlit/: config.toml  credentials.toml
backend/: .env  Dockerfile  api.py  auth_service.py  aws_database.py  aws_s3_storage.py  check_databank_status.py  cloud_database.py  cloud_storage.py  course_generator.py  course_models.py  course_repository.py  data_ingestion.py  database.py  enhanced_api.py  enhanced_aws_database.py  migrate_rds_schema.py  migrate_to_cloud.py  migrate_to_enhanced.py  models.py  populate_ai_tools.py  requirements.txt  seed_data.py  session_manager.py  setup_aws.py  start_enhanced_server.py  superset_service.py  test-final.txt  test-presigned.txt  test-upload.txt  test_aws_connection.py  test_aws_quick.py  test_course_api.py  test_course_fixes.py  test_course_generator.py  test_course_storage.py  test_enhanced_databank.py
backend/data/: courses.db  databank.db
frontend/: app.py  index.html  package-lock.json  package.json  vite.config.js
frontend/pages/: 1_climate_impact.py  article2.py  harry funke.py  linklist.py  links.py
frontend/src/: App.jsx  index.css
pages/: 1_climate_impact.py  article.py  article1.py  articles.py  harry funke.py  links.py  visualisations.py
templates/: about.html  base.html  home.html
(+25 files in other folders)
