[project]
name = "gitthubdotorg"
version = "1"
description = "gitthubdotorg website for the ai company gitthub. main purpose will be threefold: showcase data science articles on relevant topics, demos of ai-solutions and host a repository on educational materials"
authors = [
    {name = "illmakeithappen",email = "d4t4.flo@pm.me"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

